# routes.go/routes.go
@@ -3,7 +3,10 @@ package routes
 import (
 	_ "infosystem/docs"
 	"infosystem/handlers"
+	"infosystem/middleware"
+	"time"
 
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 
 	swaggerFiles "github.com/swaggo/files"
@@ -13,10 +16,30 @@ import (
 func Routes(ctrl *handlers.HandlerService) *gin.Engine {
 	router := gin.Default()
 
+	router.Use(cors.New(cors.Config{
+		AllowOrigins: []string{"*"},
+		AllowMethods: []string{"GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"},
+		AllowHeaders: []string{"Accept", "Authorization", "Content-Type", "X-CSRF-Token", "Origin", "X-Requested-With",
+			"Cache-Control", "User-Agent", "Referer", "If-Modified-Since", "If-None-Match", "Range", "Host", "X-Custom-Header",
+			"Cookie", "Access-Control-Request-Method", "Access-Control-Request-Headers", "Accept-Encoding", "Connection", "Token", "X-header",
+		},
+		ExposeHeaders:    []string{"Link"},
+		AllowCredentials: true,
+		MaxAge:           24 * time.Hour,
+	}))
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
 	router.POST("/signup/patient", ctrl.RegisterPatient)
 	router.POST("/signup/doctor", ctrl.RegisterDoctor)
 	router.POST("/signin/doctor", ctrl.LoginDoctor)
 	router.POST("/signin/patient", ctrl.LoginPatient)
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	router.Use(middleware.Auth())
+	router.POST("/appointment/book", ctrl.BookAppointment)
+	router.GET("/appointment/all", ctrl.GetAllAppointmentByDoctor)
+	router.GET("/appointment/:appointmentid", ctrl.GetAppointment)
+	router.DELETE("/delete/:appointmentid", ctrl.DeleteApppointment)
+	router.DELETE("/delete/:patientid", ctrl.DeleteAllAppointment)
+
 	return router
 }
